--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,10 @@
     ],
     "require": {
         "symfony/routing": "^3.3",
-        "klein/klein": "^2.1"
+        "klein/klein": "^2.1",
+        "twig/twig": "^2.4"
+    },
+    "autoload":{
+        "psr-4": { "classes\\" : "classes/"}
     }
 }
