added Code style configuration

--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,19 @@
 {
-    "name": "ilija.savic/composer-simple-app",
-    "authors": [
-        {
-            "name": "ilijasavic",
-            "email": "ilija.savic@devtechgroup.com"
-        }
-    ],
-    "require": {
-        "symfony/routing": "^3.3",
-        "klein/klein": "^2.1",
-        "twig/twig": "^2.4"
-    },
-    "autoload":{
-        "psr-4": { "classes\\" : "classes/"}
+  "name": "ilija.savic/composer-simple-app",
+  "authors": [
+    {
+      "name": "ilijasavic",
+      "email": "ilija.savic@devtechgroup.com"
     }
+  ],
+  "require": {
+    "symfony/routing": "^3.3",
+    "klein/klein": "^2.1",
+    "twig/twig": "^2.4"
+  },
+  "autoload": {
+    "psr-4": {
+      "classes\\": "classes/"
+    }
+  }
 }
